# higress-ops-mcp-server

./: .env.example  .gitignore  README.md  client.py  pyproject.toml  server.py  test.py  update_blocked_code.py  utils.py
tools/: common.py  handler.py  register.py  request_block.py  route.py  service_source.py
tools/plugins/: common.py  request_block.py
utils/: higress_client.py  params.py  tools_handler.py  tools_register.py
